@@ -47,6 +47,7 @@ var defaultSites = {
   'The Sydney Morning Herald': 'smh.com.au',
   'The Washington Post': 'washingtonpost.com',
   'The Wall Street Journal': 'wsj.com',
+  'Towards Data Science': 'towardsdatascience.com',
   'Vanity Fair': 'vanityfair.com',
   'Wired': 'wired.com'
 };
