@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<div style="width:220px;">Bypass Paywalls v1.3.6 by Adam
+<div style="width:220px;">Bypass Paywalls v1.3.7 by Adam
 <a href="options.html">Options</a></div>
 </body>
 </html>
