@@ -1,5 +1,6 @@
 Updates--
 
+2018-07-22 v1.3.7: Added towardsdatascience.com, fixed medium.com
 2018-07-22 v1.3.6: Added spectator.co.uk
 2018-07-22 v1.3.5: Added newstatesman.com
 2018-07-15 v1.3.4: Added OC Register (ocregister.com), added Caixin (caixinglobal.com)
